# unified-ai-misalignment-framework

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  config_gpt51_test.json  config_kimi_test.json  config_numberguess.json  conftest.py  experiment_config.schema.json  pyproject.toml  requirements-dev.txt  run_experiment.sh  test_gpt51.py  test_openrouter.py  test_routing.py  unified_runner.py  verify_baseline.py
configs/: claude_opus.json  claude_opus_new.json  claude_sonnet4.json  claude_sonnet4_baseline.json  gpt5_reasoning.json  o3_baseline.json
docs/: observability.md
implementations/anthropic_baseline/: docker-compose.yml  run.sh  run.sh.backup
implementations/anthropic_claude/: run.sh
implementations/anthropic_reasoning/: docker-compose.yml  run.sh
implementations/google_reasoning/: docker-compose.yml  run.sh
implementations/openai_baseline/: docker-compose.yml  run.sh
implementations/openai_reasoning/: docker-compose.yml  run.sh  run.sh.backup
outputs/gpt5_baseline_0916_2019_20250916_201903/: result.json  standardized_result.json
outputs/gpt5_reasoning_0916_2032_20250916_203216/: standardized_result.json
outputs/gpt5_reasoning_0916_2042_20250916_204215/: result.json  standardized_result.json
outputs/gpt5_reasoning_0916_2101_20250916_210159/: standardized_result.json
shared/docker/: README.md  (+6 more)
tests/: test_emit.py  test_events.py  test_gate.py  test_interview.py  test_lint.py  test_normalizers_anthropic.py  test_normalizers_google.py  test_normalizers_openai.py  test_obs.py  test_replay_equivalence.py  test_runner_logging.py
(+96 files in other folders)
